--- a/css/style.css
+++ b/css/style.css
@@ -2265,32 +2265,6 @@ h6 { font-size: 16px; }
 }
 
 /*---------------------------------------------------*/
-/*	13) CAVANI GLITCH EFFECT
-/*---------------------------------------------------*/
-
-.cavani_tm_mainpart .author_image .glitch_wrap{
-	position: relative;
-	width: 100%;
-	height:100%;
-	float: left;
-	overflow: hidden;
-}
-.glitch{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background-image: url("..//img/about/2.jpg");
-	background-size: cover;
-	-webkit-background-size: cover;
-	background-position: center;
-	z-index: -1 !important;
-	opacity: 1;
-	transform: scale(1);
-}
-
-/*---------------------------------------------------*/
 /*	14) CAVANI PARTICLE EFFECT
 /*---------------------------------------------------*/
 
@@ -2308,20 +2282,6 @@ h6 { font-size: 16px; }
 }
 
 /*---------------------------------------------------*/
-/*	15) CAVANI RIPPLE EFFECT
-/*---------------------------------------------------*/
-
-.cavani_tm_mainpart .author_image .ripple{
-	width: 100%;
-	height: 100%;
-	position: relative;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	background-image: url("..//img/about/3.jpg");
-}
-
-/*---------------------------------------------------*/
 /*	16) CAVANI MEDIA QUERIES (FOR SMALL DEVICES)
 /*---------------------------------------------------*/
 
@@ -2329,7 +2289,7 @@ h6 { font-size: 16px; }
 	body{font-size: 15px;}
 	.cavani_tm_header .logo .text{line-height: 60px;}
 	.cavani_tm_header .logo img{max-width: 95px;}
-	.cavani_tm_mainpart .author_image{width: 35%;}
+	.cavani_tm_mainpart .author_image{display: none;}
 	.cavani_tm_mainpart .main_content{width: 65%;}
 	.cavani_tm_section .section_inner:before{width: 50px;}
 	.cavani_tm_title span{letter-spacing: 7px;}
@@ -2357,6 +2317,7 @@ h6 { font-size: 16px; }
 	.cavani_tm_contact .short_info ul li .list_inner{padding: 20px 10px;}
 	.cavani_tm_modalbox .box_inner{width: 750px;top: 45px;bottom: 45px;}
 	.cavani_tm_modalbox .description_wrap{padding: 30px;}
+	.gameContainer {display: none;}
 }
 @media (max-width: 1040px) {
 	.mouse-cursor{display: none;}
@@ -2404,6 +2365,7 @@ h6 { font-size: 16px; }
 	.cavani_tm_modalbox .portfolio_main_title h3{font-size: 20px;}
 	.cavani_tm_modalbox .news_popup_informations .title h3{font-size: 20px;}
 	.cavani_tm_modalbox .service_popup_informations .main_title h3{font-size: 20px;}
+	.gameContainer {display: none;}
 }
 @media (max-width: 768px) {
 	.cavani_tm_home .name{font-size: 40px;}
@@ -2428,6 +2390,7 @@ h6 { font-size: 16px; }
 	.cavani_tm_news .news_list > ul > li .list_inner .details:before{display: none;}
 	.cavani_tm_news .news_list > ul > li .list_inner .details{margin: 0px;padding: 0px;max-width: 100% !important;}
 	.cavani_tm_news .news_list > ul > li{padding: 20px 0px;}
+	.gameContainer {display: none;}
 }
 
 .researchTitle {
